--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+
+    <color name="c_negro">#3C3744</color>
+    <color name="c_azulv1">#090C9B</color>
+    <color name="c_azulv2">#3D52D5</color>
+    <color name="c_azulv3">#B4C5E4</color>
+    <color name="c_blanco">#FBFFF1</color>
+
 </resources>
